--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
-<h1>Lonnie
+
+	<head>
+		<meta charset=utf-8>
+		<title>My first three.js app</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>
+	</head>
+	<body><h1>Lonnie
 <h2>was
 <h3>here
-
+		<script src="js/three.js"></script>
+		<script>
+			// Our Javascript will go here.
+		</script>
+	</body>
 </html>
