--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ scene.add( cube );
 camera.position.z = 5;
 function render() {
 	requestAnimationFrame( render );
+cube.rotation.x += 0.1;
+cube.rotation.y += 0.1;
+    
 	renderer.render( scene, camera );
 }
 render();
