--- a/index.html
+++ b/index.html
@@ -9,35 +9,34 @@
 			canvas { width: 100%; height: 100% }
 		</style>
 	</head>
-	<body><h1>Lonnie
-<h2>was
-<h3>here
+	<body><h1>Lonnie L. Souder
+
 		<script src="js/three.js"></script>
-		<script>
-var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+        <script>
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
-			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize( window.innerWidth, window.innerHeight );
+        document.body.appendChild( renderer.domElement );
 
-			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-			var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
-			var cube = new THREE.Mesh( geometry, material );
-			scene.add( cube );
+        var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+        var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+        var cube = new THREE.Mesh( geometry, material );
+        scene.add( cube );
 
-			camera.position.z = 5;
+        camera.position.z = 5;
 
-			var render = function () {
-				requestAnimationFrame( render );
+        var render = function () {
+            requestAnimationFrame( render );
 
-				cube.rotation.x += 0.1;
-				cube.rotation.y += 0.1;
+            cube.rotation.x += 0.1;
+            cube.rotation.y += 0.1;
 
-				renderer.render(scene, camera);
-			};
+            renderer.render(scene, camera);
+        };
 
-			render();
-		</script>
+        render();
+        </script>
 	</body>
 </html>
