--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
 
+
+
 <head>
     <meta charset=utf-8>
     <title>My first three.js app</title>
@@ -14,18 +16,37 @@
             width: 100%;
             height: 100%
         }
+
+        #info {
+            position: absolute;
+            color: white;
+            top: 500px;
+            width: 100%;
+            text-align: center;
+            z-index: 100;
+            display: block;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Lonnie L. Souder
+    <h1>Learning some Three.js
+
+        <!-- add overlay text using this -->
+        <!-- <div id="info">Description</div> -->
 
         <script src="js/three.js"></script>
         <script src="js/OrbitControls.js"></script>
         <script>
+         console.log("Gwkki wcwetvt");
             /* global THREE */
             var scene = new THREE.Scene();
+
             var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+            camera.position.z = 100;
+            camera.updateProjectionMatrix();
+
             var renderer = new THREE.WebGLRenderer();
             var controls =
                 renderer.setSize(window.innerWidth, window.innerHeight);
@@ -34,44 +55,39 @@
             controls = new THREE.OrbitControls(camera, renderer.domElement);
             controls.target = new THREE.Vector3(0, 0, 0);
 
+            var data = {
+                text: "Lonnie L. Souder",
+                size: 10,
+                height: 2,
+                curveSegments: 12,
+                font: "helvetiker",
+                weight: "regular",
+                bevelEnabled: false,
+                bevelThickness: 1,
+                bevelSize: 0.5,
+                bevelSegments: 3
+            }
+            var textrot = add3dText();
             addLights();
             maketheskycube();
 
-            var cubegeo = new THREE.BoxGeometry(1, 1, 1);
-            var cubemat = new THREE.MeshPhongMaterial({
-                color: 0x00dd00,
-                specular: 0x999999,
-                shininess: 0,
-                shading: THREE.SmoothShading
-            });
-            var cube1 = new THREE.Mesh(cubegeo, cubemat);
-            scene.add(cube1);
+            var cuberot = makeSomeRotatingCubes();
 
-            cubemat = new THREE.MeshPhongMaterial({
-                color: 0xdddd00,
-                specular: 0x999999,
-                shininess: 0,
-                shading: THREE.FlatShading
-            });
-
-            var cube2 = new THREE.Mesh(cubegeo, cubemat);
-            cube2.position.set(1, 1, 1);
-            scene.add(cube2);
-
-            camera.position.z = 200;
-
+//must define this before I call it???
             var render = function() {
                 requestAnimationFrame(render);
 
-                cube1.rotation.x += 0.01;
-                cube2.rotation.y += 0.01;
+                cuberot();
+                textrot();
 
                 renderer.render(scene, camera);
                 controls.update();
             };
 
-            render();
+//wait a sec so the fonts can load then reunder stuff.
+            setTimeout(render, 200);
 
+// of the function defs start here
             function addLights() {
                 var dirLight = new THREE.DirectionalLight(0xffffff, 1);
                 dirLight.position.set(100, 100, 50);
@@ -125,6 +141,68 @@
                 rightWall.position.set(100, 50, 0);
                 scene.add(rightWall);
 
+            }
+
+            function add3dText() {
+                var mesh;
+                var textmat = new THREE.MeshPhongMaterial({
+                    color: 0x00dd00,
+                    specular: 0x999999,
+                    shininess: 0,
+                    shading: THREE.SmoothShading
+                });
+                var fontLoading = async function() {
+                    console.log("done loading font");
+                }
+                var loader = new THREE.FontLoader();
+                loader.load('js/helvetiker_regular.typeface.json', function(font) {
+
+                    var geometry = new THREE.TextGeometry(data.text, {
+                        font: font,
+                        size: data.size,
+                        height: data.height,
+                        curveSegments: data.curveSegments,
+                        bevelEnabled: data.bevelEnabled,
+                        bevelThickness: data.bevelThickness,
+                        bevelSize: data.bevelSize,
+                        bevelSegments: data.bevelSegments
+                    });
+                    geometry.center();
+                    mesh = new THREE.Mesh(geometry, textmat);
+                    scene.add(mesh);
+                    fontLoading();
+                });
+
+                return function() {
+                    mesh.rotation.y += .02;
+                }
+            }
+
+            function makeSomeRotatingCubes() {
+                var cubegeo = new THREE.BoxGeometry(1, 1, 1);
+                var cubemat = new THREE.MeshPhongMaterial({
+                    color: 0x00dd00,
+                    specular: 0x999999,
+                    shininess: 0,
+                    shading: THREE.SmoothShading
+                });
+                var cube1 = new THREE.Mesh(cubegeo, cubemat);
+                scene.add(cube1);
+
+                cubemat = new THREE.MeshPhongMaterial({
+                    color: 0xdddd00,
+                    specular: 0x999999,
+                    shininess: 0,
+                    shading: THREE.FlatShading
+                });
+
+                var cube2 = new THREE.Mesh(cubegeo, cubemat);
+                cube2.position.set(1, 1, 1);
+                scene.add(cube2);
+                return function() {
+                    cube1.rotation.x += 0.01;
+                    cube2.rotation.y += 0.01;
+                }
             }
         </script>
 </body>
