--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
                <hr />
                <ul class="social">
                   <li><a href="https://www.facebook.com/lonnie.souder"><i class="fa fa-facebook"></i></a></li>
+                  <!--
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  -->
+
+                  <li><a href="https://plus.google.com/u/0/105414151689235764251"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/lonnie-souder-a070b5a5"><i class="fa fa-linkedin"></i></a></li>
+                  <!--
                   <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                  -->
                </ul>
             </div>
          </div>
