add some work experience

--- a/index.html
+++ b/index.html
@@ -202,12 +202,28 @@
 
                   <div class="twelve columns">
 
-                     <h3>Awesome Design Studio</h3>
-                     <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                     <h3>ATEC LLC</h3>
+                     <p class="info">Technical Lead/Senior Computer Scientist <span>&bull;</span> <em class="date">October 2012 - Present</em></p>
 
                      <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
-                        sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                        Support the FAA's Target Generation Facility. Supply software which simulates air traffic for experiments and testing. Also provide communication interfaces. Write and maintain visualization software including 3 Virtual tower simulations and one cockpit's
+                        "out the window" display.
+                     </p>
+
+                  </div>
+
+               </div>
+               <!-- item end -->
+               <div class="row item">
+
+                  <div class="twelve columns">
+
+                     <h3>Engility</h3>
+                     <p class="info">Senior Computer Scientist <span>&bull;</span> <em class="date">October 2012 - Present</em></p>
+
+                     <p>
+                        Same job, different contractor. Support the FAA's Target Generation Facility. Supply software which simulates air traffic for experiments and testing. Also provide communication interfaces. Write and maintain visualization software including 3 Virtual
+                        tower simulations and one cockpit's "out the window" display.
                      </p>
 
                   </div>
@@ -219,12 +235,12 @@
 
                   <div class="twelve columns">
 
-                     <h3>Super Cool Studio</h3>
-                     <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                     <h3>Adpative Trade</h3>
+                     <p class="info">Computer Scientist <span>&bull;</span> <em class="date">October 2001 - February 2003</em></p>
 
                      <p>
-                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet
-                        mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
+                        Participate in a start up company which developed software for b2b markets. Electronic commerce is facilitated through adaptive trade specifications and matchmaking optimization. Adaptive trade specifications provide a standard format for traders to specify
+                        needs in both qualitative and quantitative terms, as well as constraints and an objective such as maximum profit or minimum price.
                      </p>
 
                   </div>
