Fix the header entries. Removed testimonials and put the section id for contact back into the html.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                <li><a class="smoothscroll" href="#about">About</a></li>
                <li><a class="smoothscroll" href="#resume">Resume</a></li>
                <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-               <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
                <li><a class="smoothscroll" href="#contact">Contact</a></li>
             </ul>
             <!-- end #nav -->
@@ -353,6 +352,7 @@
 
 
 
+      <section id="contact">
             <aside class="four columns footer-widgets">
 
                <div class="widget widget_contact">
