--- a/movingtext.html
+++ b/movingtext.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
-
 <html>
-
-
-
-    <head>
-        <meta charset=utf-8>
-        <title>I am Lonnie L. Souder</title>
-        <style>
-            body {
-                margin: 0;
-            }
+<head>
+  <meta charset=utf-8>
+  <title>llsouder</title>
+  <style>
+    body {
+      margin: 0;
+    }
             
-            canvas {
-                width: 100%;
-                height: 100%
-            }
-        </style>
-    </head>
+    canvas {
+      width: 100%;
+      height: 100%
+    }
+  </style>
+</head>
+<body>
+<h1>llsouder</h1>
+  <script src="js/three.js"></script>
+  <script src="js/OrbitControls.js"></script>
+  <script src="js/3dSceneObjs.js"></script>
+  <script>
+    console.log("Starting movingtext script");
+    /* global THREE addTheFloor addLights*/
 
-    <body>
-        <h1>I am Lonnie L. Souder
-            <script src="js/three.js"></script>
-            <script src="js/OrbitControls.js"></script>
-            <script src="js/3dSceneObjs.js"></script>
-            <script>
-                console.log("Starting movingtext script");
-                /* global THREE addTheFloor addLights*/
+    // x (+)right to (-)left
+    // y (+)up to (-)down
+    // z (+)forwar to (-)backward
 
-                // x (+)right to (-)left
-                // y (+)up to (-)down
-                // z (+)forwar to (-)backward
+    var scene = new THREE.Scene();
+    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-                var scene = new THREE.Scene();
-                var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 50;
+    camera.updateProjectionMatrix();
 
-                camera.position.z = 50;
-                camera.updateProjectionMatrix();
+    var renderer = new THREE.WebGLRenderer();
+    var controls =
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+    // Add the orbit controls
+    controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.target = new THREE.Vector3(0, 0, 0);
 
-                var renderer = new THREE.WebGLRenderer();
-                var controls =
-                    renderer.setSize(window.innerWidth, window.innerHeight);
-                document.body.appendChild(renderer.domElement);
-                // Add the orbit controls
-                controls = new THREE.OrbitControls(camera, renderer.domElement);
-                controls.target = new THREE.Vector3(0, 0, 0);
-
-                addTheFloor(scene);
-                addLights(scene);
-
-                //must define this before I call it???
-                var render = function() {
-                    requestAnimationFrame(render);
-                    renderer.render(scene, camera);
-                    controls.update();
-                };
-                render();
-            </script>
-    </body>
-
+    addTheFloor(scene);
+    addLights(scene);
+		var data = {
+      text: "llsouder",
+      x: 0,
+      y: 20,
+      z: -70,
+      size: 10,
+	    height: 3
+    }
+    maketheskycube(scene);
+    add3dText(data, scene);
+    //must define this before I call it???
+    var render = function() {
+      requestAnimationFrame(render);
+      renderer.render(scene, camera);
+      controls.update();
+    };
+    render();
+  </script>
+</body>
 </html>
