--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
          <div class="row banner">
             <div class="banner-text">
-               <h1 class="responsive-headline">I'm Lonnie L. Souder.</h1>
-               <h3>I'm a South Jersey based <span>software developer</span>, <span>Maker/Hacker</span> and <span>volunteer</span> supporting my family and hobbies writing software. Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn
+               <h1 class="responsive-headline">Lonnie L. Souder.</h1>
+               <h3>I am a South Jersey based <span>software developer</span>, <span>Maker/Hacker</span> and <span>volunteer</span> supporting my family and hobbies writing software. Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn
                   more <a class="smoothscroll" href="#about">about me</a>.</h3>
                <hr />
                <ul class="social">
